# AFGEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  frametool.ini  vaki.vt8
Modules/: CMakeLists.txt
Modules/RtAudio/: License
Modules/common/: CMakeLists.txt  shader.cpp  shader.h  texture.cpp  texture.h  ubo.cpp  vao.cpp  vao.h
Modules/fixed_point/: fixed_point.cpp  fixed_point.h
Modules/geometry/: point.h  rect.h
Modules/image/: image.cpp  image.h
char/: vaki - Copy.char
cmake/: glad.cmake  imgui.cmake  imguiFD.cmake  includes.cmake  sol2.cmake
data/: def.frag  def.vert  defRect.frag  palette.frag  palette.vert  particle.vert  simple.frag  simple.vert
data/bg/: bg.lua  bg.lzs3  bg.vt4
data/char/: untitled.char  vaki.char
data/char/vaki/: def.lua  effect.vt4  effect32.lzs3  moves.lua  script.lua  vaki.char  vaki.vt1  vaki.vt4  vakiOld.char
data/hud/: hud.lua  hud.lzs3
data/images/: background.lzs3  font.lzs3  hud.lzs3  vaki.vt8
data/palettes/: col1.act  col2.act
engine/: CMakeLists.txt  actor.cpp  actor.h  audio.cpp  audio.h  battle_interface.h  battle_scene.cpp  battle_scene.h  camera.cpp  camera.h  chara.cpp  chara.h  chara_input.cpp  chara_input.h  command_inputs.cpp  command_inputs.h  compile_commands.json  framedata.cpp  framedata.h  game_state.h  gfx_handler.cpp  gfx_handler.h  hitbox_renderer.cpp  hitbox_renderer.h  hud.cpp  hud.h  main.cpp  main.h  raw_input.cpp  raw_input.h  render_context.cpp  render_context.h  resource.rc  shader.cpp  shader.h  sprite.cpp  sprite.h  stage.cpp  stage.h  texture.cpp  (+9 more)
modules/common/: CMakeLists.txt  gfx_handler.cpp  gfx_handler.h  particle.cpp  particle.h  texture.cpp  texture.h  ubo.cpp  ubo.h  vao.cpp  vao.h  xorshift.cpp  xorshift.h
modules/fixed_point/: fixed_point.cpp  fixed_point.h
modules/geometry/: geometry.h  point.h  rect.h
modules/image/: image.cpp  image.h
palettes/: akicolor.act  play2.act
src/: CMakeLists.txt  camera.cpp  camera.h  chara.cpp  hud.cpp  hud.h  main.cpp  netplay.cpp  netplay.h  raw_input.cpp  raw_input.h  shader.cpp  shd.txt  texture.h  threading.h  util.h  vertex.txt  window.cpp  window.h
submodules/glad/include/KHR/: khrplatform.h
submodules/glad/include/glad/: glad.h
submodules/glad/src/: glad.c
tools/: CMakeLists.txt  pack_image.cpp  pack_image.h
tools/compImage/: CMakeLists.txt  main.cpp
tools/frametool/: CMakeLists.txt  draw_window.h  framedata.cpp  framedata.h  hitbox.h  ini.cpp  ini.h  main.cpp  main_frame.cpp  main_frame.h  main_pane.cpp  main_pane.h  render.cpp  render.h  types.h  window.cpp  window.h
tools/packImage/: CMakeLists.txt  pack_image.cpp  pack_image.h
